--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -94,6 +94,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "functions = []\n",
+    "for x in range(4):\n",
+    "    # print(x)\n",
+    "    functions.append(lambda i, real_x =x: i+real_x)\n",
+    "\n",
+    "    for function in functions:\n",
+    "        print(function(0))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def func(a,b,c=10):\n",
+    "    print(a+b+c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "func(1,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
